# tucana

./: Architecture_Overview.md  Cyber_Security.md  Design_Considerations.md  Detail_Design.md  Introduction.md  README.md
.github/workflows/: build-electron.yaml  build-installer.yaml  deploy.yaml  deploy_dev.yaml  deploy_hq.yaml  deploy_prod.yaml  deploy_qa.yaml  e2e_manual.yaml  e2e_run.yaml  infra_base_dev.yaml  infra_base_mon_non_prod.yaml  infra_base_mon_prod.yaml  infra_base_prod.yaml  infra_base_qa.yaml  installer-e2e.yaml  main.yml  pr_validation.yaml  pull_request.yaml  release.yaml  reusable_deploy.yaml  (+1 more)
Installation/: .env
cloud/: docker-compose.yaml  run.sh
infra/: offline-infra-images.lst
scripts/cms_installer/: .gitignore  README.md  build.sh  cms_installer.spec  create_env.sh  pyproject.toml  run.sh  run_shortcut.sh  version.txt
scripts/cms_installer/app/: installer.py  installer_tools.py  main.py  models.py  settings.py  shortcut.py  validations.py  version.py
scripts/cms_installer/app/screens/: auth_admin.py  auth_clinical.py  confirmation.py  disk.py  docker_images.py  installation.py  k8s_lb.py  k8s_nodes.py  quit.py  sdc.py  ssh.py  welcome.py
scripts/cms_installer/app/styles/: common.tcss  installation.tcss  welcome.tcss
scripts/cms_installer/e2e/: test_app.py
scripts/cms_installer/infra/accounts/dev/: main.tf
scripts/cms_installer/infra/accounts/dev/base/: main.tf
scripts/cms_installer/infra/modules/cli_test_environment/: instances.tf  outputs.tf  variables.tf  vpc.tf
scripts/cms_installer/tests/: test_welcome_screen.py
(+441 files in other folders)
